--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/testt.loader.js";
       var config = {
-        dataUrl: buildUrl + "/testt.data.br",
-        frameworkUrl: buildUrl + "/testt.framework.js.br",
-        codeUrl: buildUrl + "/testt.wasm.br",
+        dataUrl: buildUrl + "Build/testt.data.br",
+        frameworkUrl: buildUrl + "Build/testt.framework.js.br",
+        codeUrl: buildUrl + "Build/testt.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "UndertaleTest2",
